feat: ajustes no swagger e troca de validadores
