# src/infrastructure/routes/organizer/GroupRouter.ts
@@ -18,12 +18,14 @@ export class GroupRouter {
         this.router.get('', (req: Request, res: Response) =>
             this.groupController.getGroups(req, res)
         );
-        this.router.post('', [...schemas.register, ValidationErrorHandler.handle], (req: Request, res: Response) =>
+        this.router.post('/create', [...schemas.register, ValidationErrorHandler.handle], (req: Request, res: Response) =>
             this.groupController.createGroup(req, res)
         );
-        this.router.get('/:groupId', [...schemas.detail, ValidationErrorHandler.handle], (req: Request, res: Response) =>
+
+        this.router.get('/details/:groupId', [...schemas.detail, ValidationErrorHandler.handle], (req: Request, res: Response) =>
             this.groupController.getGroup(req, res)
         );
+
         this.router.put('/:groupId', [...schemas.update, ValidationErrorHandler.handle], (req: Request, res: Response) =>
             this.groupController.updateGroup(req, res)
         );
