# src/infrastructure/routes/organizer/ScheduleRouter.ts
@@ -14,13 +14,13 @@ export class ScheduleRouter {
     }
 
     private initializeRoutes(): void {
-        this.router.post('', [...schemas.register, ValidationErrorHandler.handle], (req: Request, res: Response) =>
+        this.router.post('/create', [...schemas.register, ValidationErrorHandler.handle], (req: Request, res: Response) =>
             this.schedulesController.createSchedule(req, res)
         );
-        this.router.get('/:groupId', [...schemas.getSchedules, ValidationErrorHandler.handle], (req: Request, res: Response) =>
+        this.router.get('/group/:groupId', [...schemas.getSchedules, ValidationErrorHandler.handle], (req: Request, res: Response) =>
             this.schedulesController.getSchedules(req, res)
         );
-        this.router.get('/:scheduleId/group-id/:groupId', [...schemas.detail, ValidationErrorHandler.handle], (req: Request, res: Response) =>
+        this.router.get('/details/:scheduleId', [...schemas.detail, ValidationErrorHandler.handle], (req: Request, res: Response) =>
             this.schedulesController.getSchedule(req, res)
         );
         this.router.put('/:scheduleId', [...schemas.update, ValidationErrorHandler.handle], (req: Request, res: Response) =>
